# usb_hub_monitor

./: README.md  makefile  readme.txt  usb_hub_monitor  usb_hub_monitor.cpp  usb_hub_prefix.conf
serial_port/: CMakeLists.txt  common.h  main.cpp  stty.c  stty.h  usb_hub_monitor.cpp  usb_hub_monitor.h  usb_hub_study.cpp  usb_hub_study.h
